# pet-schema

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  schema_guard.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-04-14-pet-schema-v1.md  2026-04-29-bowl-optional-and-thinking-toggle.md
docs/superpowers/specs/: 2026-04-14-pet-schema-v1-design.md
src/pet_schema/: __init__.py  annotations.py  configs.py  enums.py  metric.py  model_card.py  models.py  recipe.py  renderer.py  samples.py  training_samples.py  validator.py  version.py
src/pet_schema/adapters/: __init__.py  hf_features.py  manifest.py  webdataset.py
src/pet_schema/versions/v1.0/: few_shot_examples.json  prompt_system.txt  prompt_user.jinja2  schema.json
tests/: conftest.py  test_adapters_hf.py  test_adapters_manifest.py  test_adapters_webdataset.py  test_annotations.py  test_configs.py  test_deployment_status.py  test_enums.py  test_examples.py  test_food_type_optional.py  test_hardware_validation.py  test_metric_report.py  test_model_card.py  test_models.py  test_public_api.py  test_pydantic_sync.py  test_recipe.py  test_renderer.py  test_samples.py  test_training_samples.py  test_validator.py  test_version.py
versions/v1.0/: CHANGELOG.md  few_shot_examples.json  prompt_system.txt  prompt_user.jinja2  schema.json
