[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pet-schema"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "jsonschema>=4.20,<5.0",
    "pydantic>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy", "pip-tools"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
